--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="resume-item pb-0">
               <h5>Pemfaktoran adalah ekspresi dari penjumlahan suku-suku aljabar pada perkalian faktor-faktor. Adapun dari persamaan kuadrat ini kemudian membuat persamaan kuadrat menjadi produk dua persamaan linier.</h5>
               <h4>contoh</h4>
-              <img src="img/contoh2.jpeg" alt="" style="width:30rem; height:18rem;">
+              <img src="img/contoh2.jpeg" alt="" class="img-tes">
             </div>
         <h3 class="resume-title">KUADRAT SEMPURNA</h3>  
         
@@ -153,7 +153,7 @@
             <div class="resume-item pb-0">
               <h5>Kuadrat sempurna adalah cara untuk menyelesaikan persamaan kuadrat dengan melengkapkan kuadratnya sehingga menjadi sempurna. Bentuk persamaan kuadrat sempurna merupakan bentuk persamaan yang menghasilkan bilangan rasional.</h5>
               <h4>contoh</h4>
-              <img src="img/contoh kuadrat sempurna.png" alt="" style="width:30rem; height:18rem;">
+              <img src="img/contoh kuadrat sempurna.png" alt="" class="img-tes">
             </div>
         <h3 class="resume-title">RUMUS ABC</h3> 
         
@@ -162,7 +162,7 @@
             <div class="resume-item pb-0">
               <h5>Rumus ABC adalah rumus yang digunakan untuk mencari akar-akar pada persamaan kuadrat. Rumus ini bisa digunakan saat pemfaktoran dan melengkapi kuadrat sempurna sudah tidak dapat dilakukan.</h5>
               <h4>contoh</h4>
-              <img src="img/contoh rumus abc.png" alt="" style="width:30rem; height:18rem;">
+              <img src="img/contoh rumus abc.png" alt="" class="img-tes">
             </div>  
           </div>
 
@@ -181,8 +181,8 @@
             <div class="col-12" data-aos="fade-up">
               <div class="resume-item pb-0">
           <h4>contoh</h4>
-          <img src="img/contoh.jpeg" alt="" style="width:30rem; height:18rem;">
-          <img src="img/soal1.jpeg" alt=""  style="width:30rem; height:18rem;">
+          <img src="img/contoh.jpeg" alt="" class="img-tes">
+          <img src="img/soal1.jpeg" alt=""  class="img-tes">
 
           <h3 class="resume-title">KUADRAT SEMPURNA</h3>
 
