--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
           <div class="row d-flex align-items-center">
             <div class="col-12" data-aos="fade-up">
           <h4>contoh</h4>
-          <img src="img/soal kuadrat 3.png" alt="" style="width:30rem; height:18;">
-          <img src="img/soal kuadrat 4.png" alt="" style="width:30rem; height:18;">
+          <img src="img/soal kuadrat 3.png" alt="" class="img-tes">
+          <img src="img/soal kuadrat 4.png" alt="" class="img-tes">
 
           <h3 class="resume-title">RUMUS ABC</h3>
 
           <div class="row d-flex align-items-center">
             <div class="col-12" data-aos="fade-up">
           <h4>contoh</h4>
-          <img src="img/soal rumus abc.png" alt="" style="width:40rem; height:18;">
+          <img src="img/soal rumus abc.png" alt="" class="img-tes">
               </div>
             </div>
           </div>
