--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <div class="row d-flex align-items-center">
             <div class="col-12" data-aos="fade-up">
           <h4>contoh</h4>
-          <img src="img/soal rumus abc.png" alt="" class="img-tes">
+          <img src="img/abc baru.jpeg" alt="" class="img-tes">
               </div>
             </div>
           </div>
