--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <div class="resume-item pb-0">
           <h4>contoh</h4>
           <img src="img/contoh.jpeg" alt="" class="img-tes">
-          <img src="img/soal1.jpeg" alt=""  class="img-tes">
+          <img src="img/soal1.jpeg" alt=""  class="img-tes mt-3">
 
           <h3 class="resume-title">KUADRAT SEMPURNA</h3>
 
@@ -189,7 +189,7 @@
             <div class="col-12" data-aos="fade-up">
           <h4>contoh</h4>
           <img src="img/soal kuadrat 3.png" alt="" class="img-tes">
-          <img src="img/soal kuadrat 4.png" alt="" class="img-tes">
+          <img src="img/soal kuadrat 4.png" alt="" class="img-tes mt-3"> 
 
           <h3 class="resume-title">RUMUS ABC</h3>
 
