--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Fakhri Abdul Aziz</h1>
-      <p><span class="typed" data-typed-items="TUGAS BESAR KALKULUS"></span></p>
+      <p><span class="typed" data-typed-items="TUGAS BESAR ALJABAR LINIER"></span></p>
     </div>
   </section><!-- End Hero -->
 
